# xquetzal

./: AUTHORS  LICENSE  README  README.md  configure.ac
src/: Makefile.am  gui.c
src/ollin/: .in  Makefile  Makefile.am  Makefile.in  ollin.glade
src/ollin/src/: .interface.c.swp  Buffer.c  Buffer.h  Guardar.c  Guardar.h  ImageEngine.c  ImageEngine.h  Makefile  Makefile.am  Makefile.in  Objeto.h  callbacks.c  i_addr.h  i_addr.h.old  main.c  main.c~  ollin.xml
src/ollin/src/.deps/: Buffer.P  Guardar.P  ImageEngine.P  LabPC.P  callbacks.P  colores.P  colores.pp  interface.P  interface.Po  main.P  main.Po  support.P
src/server/: GNUmakefile  INSTALL  README
src/server/xitris-server/: GNUmakefile  LabPC.c  LabPC.h  Servidor.c  i_addr.h  xitris-server
src/server/xitris-simulator/: GNUmakefile  i_addr.h  simulator.c  xitris-simulator
